--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 塞浦路斯-204.9KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇸🇬 新加坡-349.8KB/s(Youtube:不良林), server: 194.124.35.40, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇭🇰 香港-1.55MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.06MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-6.06MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-613.6KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-443.2KB/s(Youtube:不良林), server: 194.124.35.48, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-561.1KB/s(Youtube:不良林), server: 194.124.35.48, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-344.5KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇸🇬 新加坡-688.3KB/s(Youtube:不良林), server: 194.124.35.48, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-453.0KB/s(Youtube:不良林), server: 194.124.35.40, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-468.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-848.9KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-204.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-613.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-561.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-344.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-688.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-453.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-468.6KB/s(Youtube:不良林)
+      - 波兰-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
